feat: add bolt12 offer endpoints
